--- a/newNormal.html
+++ b/newNormal.html
@@ -131,7 +131,7 @@
           <div class="col-md-8">
             <div class="section-row sticky-container">
               <div class="main-post">
-                <img src="./images/newNormal_img.jpg" class="articles-style" style="background-size: cover">
+                <img src="./images/newNormal1.jpg" class="articles-style" style="background-size: cover">
                 <br>
                 <br>
                 <p class="interview-subheadings"><b>Introduction</b></p>
