--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
               <h3><a href="newNormal.html">‘The New Normal’: What is it and how do we cope with it?</a></h3>
             </div>
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
-              <a href="bestTop.html" class="d-block figure">
+              <a href="bestTop.html" class="d-block figure post-img">
                 <img src="images/bestTop.jpg" alt="Image" class="img-fluid">
               </a>
               <span class="text-muted d-block mb-1">8, Aug 2020</span>
