removed lorem ipsum under our team

--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
             <div class="col-md-7 text-center">
               <span class="sub-title">Meet Our Team</span>
               <h2 class="font-weight-bold text-black">Our Team</h2>
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, explicabo, quasi.
-                Magni deserunt sunt labore.</p>
+              <p class="mb-5">Where the comunity starts.</p>
             </div>
           </div>
 
