new edits with raghav
recorded

--- a/index.html
+++ b/index.html
@@ -458,13 +458,6 @@ google-site-verification: googlecb112f4326b69ae4.html
               <span class="text-muted">Strategic Partner</span>
             </div>
             <div class="col-lg-4 col-md-6 mb-4 project-entry">
-              <a href="images/ISA.jpeg" class="d-block figure" data-fancybox="gallery">
-                <img src="images/ISA.jpeg" alt="Image" class="img-fluid">
-              </a>
-              <h3 class="mb-0"><a href="#">ISA</a></h3>
-              <span class="text-muted">Strategic Partner</span>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-4 project-entry">
               <a href="images/Aiesec.jpeg" class="d-block figure" data-fancybox="gallery">
                 <img src="images/Aiesec.jpeg" alt="Image" class="img-fluid">
               </a>
@@ -488,6 +481,13 @@ google-site-verification: googlecb112f4326b69ae4.html
           </div>
           <div class="row mb-5">
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
+              <a href="fintech.html" class="d-block figure">
+                <img src="images/fintech.jpeg" alt="Image" class="img-fluid">
+              </a>
+              <span class="text-muted d-block mb-1">12, Nov 2020</span>
+              <h3><a href="fintech.html">FinTech Startups - Funding</a></h3>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
               <a href="newNormal.html" class="d-block figure">
                 <img src="images/newNormal.jpg" alt="Image" class="img-fluid">
               </a>
@@ -500,20 +500,6 @@ google-site-verification: googlecb112f4326b69ae4.html
               </a>
               <span class="text-muted d-block mb-1">8, Aug 2020</span>
               <h3><a href="bestTop.html">How to Stand Out during the Pandemic - BestTop Consulting Pte. Ltd.</a></h3>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
-              <a href="hkx.html" class="d-block figure">
-                <img src="images/hkx-interview.jpeg" alt="Image" class="img-fluid">
-              </a>
-              <span class="text-muted d-block mb-1">17, May 2020</span>
-              <h3><a href="hkx.html">As students, how can we survive the pandemic?</a></h3>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
-              <a href="hollo.html" class="d-block figure">
-                <img src="images/hollow-poster.jpg" alt="Image" class="img-fluid">
-              </a>
-              <span class="text-muted d-block mb-1">15, May 2020</span>
-              <h3><a href="hollo.html">Hollo: a tool that brings therapy to a next level using big data and AI</a></h3>
             </div>
 
 
