Changes for the new fintech start-up article
Added several new thumbnails, updated the fintech article and changes related to that

--- a/fintech.html
+++ b/fintech.html
@@ -131,7 +131,7 @@
           <div class="col-md-8">
             <div class="section-row sticky-container">
               <div class="main-post">
-                <img src="./images/hkx-i-1.jpg" class="articles-style" style="background-size: cover">
+                <img src="./images/Fintech-companies.jpg" class="articles-style" style="background-size: cover">
                 <br>
                 <br>
                 <p class="interview-subheadings"><b>Introduction</b></p>
@@ -139,7 +139,7 @@
                   Meanwhile, sourcing financial support for your innovative idea could be a challenge. How to get funding to pursue your fintech startup? The following six fintech startups might give you a brief idea on how to put your
                   entrepreneurship in practice.
                 </p>
-                <p class="interview-subheadings"><a href="https://www.hyperair.com/en""><b>1. HyperAir </b></a></p>
+                <p class="interview-subheadings"><a href="https://www.hyperair.com/en" target="_blank"><b>1. HyperAir </b></a></p>
               <br>
               <p>“Travel Smarter. Anywhere.”</p>
               <br>
@@ -148,10 +148,10 @@
               <br>
               <p>HyperAir is developed to provide one-stop service that includes travel gadgets, travel SIM, hotel, and travel insurance. Now, its website and mobile apps are more than just an exchange rates comparison platform. HyperAir is building a travel marketplace that understands travellers’ preferences and recommends the most suitable solutions for trip planning.
               </p>
-              <img src=" ./images/hkx-i-2.png" class="articles-style" style="background-size: cover">
+              <img src=" ./images/bowtie.jpg" class="articles-style" style="background-size: cover">
                     <br>
                     <br>
-                    <p class="interview-subheadings"><a href="https://www.bowtie.com.hk/en""><b>2. Bowtie Life Insurance Company </b></a></p>
+                    <p class="interview-subheadings"><a href="https://www.bowtie.com.hk/en" target="_blank" ><b>2. Bowtie Life Insurance Company </b></a></p>
 <br>
 <p>“Insurance is Fundamentally Good.”</p>
 <br>
@@ -159,19 +159,67 @@
                 <br>
                 <p>Bowtie is built with modern technology and medical expertise to deliver a technological insurance solution without paper, commissions, or intermediaries. Bowtie had partnered with Deliveroo HK to offer insurance to riders and their families. In April 2020, it announced its collaboration with 3 Hong Kong to launch 3Care, a mobile insurance platform.</p>
                 <br>
-
+                <p class="interview-subheadings"><a href="http://merealbiometrics.com/" target="_blank"><b>3. MeReal Biometrics </b></a></p>
+              <br>
+              <p>“Beyond Biometrics Patented, Disruptive Card Technology”</p>
+              <br>
+              <p>MeReal Biometrics is a Hong Kong cutting-edge start-up founded by Patrick Partouche in 2015, focusing on strengthening privacy settings for digital payments. It was funded by investment capitals from Patrick, who became the chairman of MeReal Biometrics, in pursuit of global patents research and development. The company specializes in biometric smart cards which apply fingerprint technology with revolutionary RFID authentication to better secure user data.
+              </p>
+              <br>
+              <p>MeReal Biometrics launched its new Keyper card in 2019. Keyper can communicate using sound waves, and the audio feature follows a China UnionPay payment standard. Improved contact functionality makes it compatible with all PC and smart card readers. Keyper helps validate user identity and information safely and confidentially.
+              </p>
+              <br>
+                <p class="interview-subheadings"><a href="https://www.welab.co/en/" target="_blank"><b>4. WeLab </b></a></p>
+              <br>
+              <p>“Our values ​​shape our approach to everything we do and are represented in every part of our business. Most importantly, they are embodied in our people”</p>
+              <br>
+              <p>WeLab is an internet finance technology company founded in January 2013 by Simon Loong, Kelly Wong and Frances Kang. It currently operates WeLend.hk,  Hong Kong’s first P2P lending business, and China’s first fully mobile P2P lending platform Wolaidai. The startup raised a $14million Series A financing from strategic and financial investors, including Sequoia Capital and TOM Group. WeLab is Sequoia Capital’s first startup investment in Hong Kong.
+              </p>
+              <br>
+              <p>WeLab offers a full-service bank that allows customers to open a bank account with their mobile phones. It partners with more than 300 financial institutions in Asia to help them better serve their customers. It recently created a custom-centered integrated mobile lending solution for one of China's leading banks so that its 500 million customers could access credit online.
+              </p>
+              <br>
+                <p class="interview-subheadings"><a href="https://www.cygnetise.com/" target="_blank"><b>5. Cygnetise </b></a></p>
+              <br>
+              <p>“Digital authorised signatory management. The safe & simple way”</p>
+              <br>
+              <p>Cygnetise is a London based startup passionate about digital transformation and blockchain. Founded by Steve Pomfret, since its launch in 2016, it has become a trusted provider to some of the world’s leading organisations such as Vistra, BNY Mellon, and PWC. The startup raised 1 million pounds in its seed funding round, the main investor being Calibrate Management. It also won the Enterprise Blockchain Award and is recognised as one of the world’s most innovative WealthTech startups.
+              </p>
+              <br>
+              <p>Cygnetise offers firms an online application to create, maintain and distribute Authorised Signatory Lists by utilising a decentralised database which includes authorised trader lists, signers and bank mandate management. Corporates benefit by managing their signature lists easily and it helps them replace manual inefficient processes by reducing the time spent managing these registers by 95%. The startup also provides an audit trail for a signatory’s history. Digitisation of this process removes paper whilst users gain better risk oversight, corporate governance and control. The key advantages of using the decentralised database are that each user can offer trusted (and validated) signatory data to their peers, without the need for a 3rd party to administer. Adoption is quick and easy, providing immediate benefit.
+              </p>
+              <br>
+                <p class="interview-subheadings"><a href="http://www.finhorizon.ch/home" target="_blank"><b>6. Finhorizon </b></a></p>
+              <br>
+              <p>“Know how to invest”</p>
+              <br>
+              <p>Finhorizon is a WealthTech startup founded by Axel Dubs and Andreas Zimmermann in 2014. It primarily develops, programs and implements risk management systems for banks. Finhorizon’s investment platform, fairvalues, enables financial service providers to individually serve clients, independent from their AUM. This allows financial service providers to generate new services, increase client acquisition and client retention and to save cost on a continuing basis. The company receives its funding from angel investors, the main investors being Deloitte Digital Disruptors and Swiss Finance Startups.
+              </p>
+              <br>
+              <p>The company’s algorithms are developed in co-operation with ETH Zurich and offer a unique way to merge all financial models into strong key investment criteria. The algorithms are based on big data and fulfil all criteria of a modern AI. The solution can provide individualized optimized portfolios over all asset classes, covering all financial instruments world-wide. Finhorizon allows each investor to find suitable investments to reach their goals and to compile optimised portfolios over all financial assets (shares, bonds, funds, ETF’s, derivatives, structured products, commodities) a unique feature world-wide.
+              </p>
+              <br>
+                <p class="interview-subheadings"><a href="http://www.finhorizon.ch/home" target="_blank"><b>Insights on Funding </b></a></p>
+              <br>
+              <p><h6>1. Funding Programs</h6></p>
+              <br>
+              <p>Fintech startups can apply for funding programs. Several government funding schemes are designated for startup companies. For example, HyperAir sourced a HK$100,000 subsidy from the Cyberport Creative Micro Fund. There are other funding programs in Hong Kong, such as Cyberport Accelerator Support Programme which provides up to HK$300,000 financial support to successful applicants.
+              </p>
+              <br>
+              <p><h6>2. Strategic and Financial Investors</h6></p>
+              <br>
+              <p>There are investors looking for strategic partnerships with fintech startups. They are willing to provide financial assistance to startups that can build hybrid solutions to solve problems in their industries. For example, Bowtie sourced funding of $234,000,000 from Sun Life Financial as a strategic and financial investor. On the other hand, WeLab was funded by $14,000,000 Series A capital from strategic and financial investors such as Sequoia Capital and TOM Group. Besides, the main investors of Cygnetise and Finhorizon are Calibrate Management and Deloitte Digital Disruptors respectively.
+              </p>
+              <br>
+              <p><h6>3. Self-financed Capitals</h6></p>
+              <br>
+              <p>Apart from external funding, fintech startup founders would usually make financial contributions to their own companies. For instance, HyperAir was established with self-financed capitals together with external funding, and MeReal Biometrics was funded by investment capital from its founder Patrick Partouche.
+              </p>
+              
                         <br>
                         <h3>Conclusion</h3>
-                        <p>Yes, all of us are adversely affected by the pandemic but that does not mean we cannot make the most out of our time in lockdown. Now that we have more time to ourselves, we could think about what we really want to do in
-                          the future. Take a step back and ask yourself, what are your interests? Is there anything you would want to try before you graduate? Or do you have a desired career? If you already have your eyes fixed on a specific role,
-                          congratulations. (Even better if you are looking into starting your own business!)</p>
-                        <p>If you have not yet found your true calling, take this opportunity to invest and equip yourself. Just as industries are improvising to get around the virus, we could also actively adjust our mindsets. You should not let
-                          geographical constraints limit your potential. Look outside of Hong Kong if necessary, there is still so much for us to explore and learn about. Besides, we could benefit a lot from online courses- there are loads of
-                          information on social media. On that note, we should always keep a critical mind and evaluate sources with caution. If you need more insights on how social media plays a role in the pandemic, stay tuned for our next article!
-                          Until then, we wish you success in all your endeavour!</p>
+                        <p>No one said it would be easy to work on a fintech startup. The growing diverse ecosystem of the fintech industry is certainly driving innovation to build a better world. Apart from the above six fintech startups, there are so many innovative fintech startups with great potential to source their funding and pursue entrepreneurship. Please stay tuned to our next article for more information about the startup ecosystem!</p>
                         <br>
-                        <span>Reference:</span>
-                        <p>BBC news- Coronavirus: Six Industries crying out for help https://www.bbc.com/news/business-52200386 , https://www.youtube.com/watch?v=oRkvO6RWVtg</p>
               </div>
 
             </div>
@@ -247,6 +295,17 @@
               <h3 class="footer-heading mb-4">Recent News</h3>
               <div class="block-25">
                 <ul class="list-unstyled">
+                  <li class="mb-3">
+                    <a href="fintech.html" class="d-flex">
+                      <figure class="image mr-4">
+                        <img src="images/Fintech-companies.jpg" alt="" class="img-fluid">
+                      </figure>
+                      <div class="text">
+                        <span class="small text-uppercase date">12, Nov 2020</span>
+                        <h3 class="heading font-weight-light">FinTech Startups - Funding</h3>
+                      </div>
+                    </a>
+                  </li>
                   <li class="mb-3">
                     <a href="bestTop.html" class="d-flex">
                       <figure class="image mr-4">
