--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ google-site-verification: googlecb112f4326b69ae4.html
           <div class="row mb-5">
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
               <a href="fintech.html" class="d-block figure">
-                <img src="images/fintech.jpeg" alt="Image" class="img-fluid">
+                <img src="images/fintech-thumbnail-resize.jpg" alt="Image" class="img-fluid" >
               </a>
               <span class="text-muted d-block mb-1">12, Nov 2020</span>
               <h3><a href="fintech.html">FinTech Startups - Funding</a></h3>
@@ -600,6 +600,17 @@ google-site-verification: googlecb112f4326b69ae4.html
             <h3 class="footer-heading mb-4">Recent News</h3>
             <div class="block-25">
               <ul class="list-unstyled">
+                <li class="mb-3">
+                  <a href="fintech.html" class="d-flex">
+                    <figure class="image mr-4">
+                      <img src="images/Fintech-companies.jpg" alt="" class="img-fluid">
+                    </figure>
+                    <div class="text">
+                      <span class="small text-uppercase date">12, Nov 2020</span>
+                      <h3 class="heading font-weight-light">FinTech Startups - Funding</h3>
+                    </div>
+                  </a>
+                </li>
                 <li class="mb-3">
                   <a href="bestTop.html" class="d-flex">
                     <figure class="image mr-4">
