Update Samson's Info

--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@ google-site-verification: googlecb112f4326b69ae4.html
           <div class="testimony px-5">
             <img src="images/samsonGor.jpeg" alt="Image" class="img-fluid">
             <h3>Mr. Samson Lam</h3>
-            <span class="sub-title">Technology Student Advisor</span>
-            <p><em>Samson is a HKU Computer Science student who is eager to gain a more detailed understanding of
-                Technology. Believing in joining various programmes and competitions, he can have a chance to pursue the
+            <span class="sub-title">Technology Advisor</span>
+            <p><em>Samson is graduated in HKU Computer Science. He is eager to gain a more detailed understanding of
+                Technology. Believing in joining various programmes and winning competitions, he can have a chance to pursue the
                 advanced technology. He will surely unravel the knowledge diligently and make contributions to the
                 discipline for the betterment of Technology. </em></p>
           </div>
