Added the Venture Capital article by the Industry Research Team
Added the Venture Capital article by the Industry Research Team from November

--- a/hollo.html
+++ b/hollo.html
@@ -233,6 +233,18 @@
             <div class="block-25">
               <ul class="list-unstyled">
                 <li class="mb-3">
+                  <li class="mb-3">
+                    <a href="venture.html" class="d-flex">
+                      <figure class="image mr-4">
+                        <img src="images/VC_square.jpg" alt="" class="img-fluid">
+                      </figure>
+                      <div class="text">
+                        <span class="small text-uppercase date">14, April 2021</span>
+                        <h3 class="heading font-weight-light">Role of Venture Capitalists in the Start-Up Ecosystem</h3>
+                      </div>
+                    </a>
+                  </li>
+                <li class="mb-3">
                   <a href="bestTop.html" class="d-flex">
                     <figure class="image mr-4">
                       <img src="images/bestTop.jpg" alt="" class="img-fluid">
