--- a/index.html
+++ b/index.html
@@ -481,6 +481,13 @@ google-site-verification: googlecb112f4326b69ae4.html
           </div>
           <div class="row mb-5">
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
+              <a href="venture.html" class="d-block figure">
+                <img src="images/VC_square.jpg" alt="Image" class="img-fluid" >
+              </a>
+              <span class="text-muted d-block mb-1">14, Apr 2021</span>
+              <h3><a href="venture.html">Role of Venture Capitalists in the Start-Up Ecosystem</a></h3>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
               <a href="fintech.html" class="d-block figure">
                 <img src="images/fintech-thumbnail-resize.jpg" alt="Image" class="img-fluid" >
               </a>
@@ -494,13 +501,7 @@ google-site-verification: googlecb112f4326b69ae4.html
               <span class="text-muted d-block mb-1">12, Aug 2020</span>
               <h3><a href="newNormal.html">‘The New Normal’: What is it and how do we cope with it?</a></h3>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 post-entry">
-              <a href="bestTop.html" class="d-block figure post-img">
-                <img src="images/bestTop.jpg" alt="Image" class="img-fluid">
-              </a>
-              <span class="text-muted d-block mb-1">8, Aug 2020</span>
-              <h3><a href="bestTop.html">How to Stand Out during the Pandemic - BestTop Consulting Pte. Ltd.</a></h3>
-            </div>
+            
 
 
           </div>
@@ -600,6 +601,17 @@ google-site-verification: googlecb112f4326b69ae4.html
             <h3 class="footer-heading mb-4">Recent News</h3>
             <div class="block-25">
               <ul class="list-unstyled">
+                <li class="mb-3">
+                  <a href="venture.html" class="d-flex">
+                    <figure class="image mr-4">
+                      <img src="images/VC_square.jpg" alt="" class="img-fluid">
+                    </figure>
+                    <div class="text">
+                      <span class="small text-uppercase date">14, April 2021</span>
+                      <h3 class="heading font-weight-light">Role of Venture Capitalists in the Start-Up Ecosystem</h3>
+                    </div>
+                  </a>
+                </li>
                 <li class="mb-3">
                   <a href="fintech.html" class="d-flex">
                     <figure class="image mr-4">
